--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Todo</title>
 </head>
 <body>
@@ -10,6 +11,7 @@
         <h2>To-Do List</h2>
         <div class="input">
             <input type="text" class="input-field" id="todoInput" placeholder="Add a new todo"/>
+            <button class="btn">Add</button>
         </div> 
         <ul class="scroll">
             <li id="todoList"></li>
@@ -21,10 +23,14 @@
                 <button id="deleteButton">Delete All</button>
             </div>
         </div>
-        <button class="btn">Add</button>
         
     </section>
-    <footer></footer>
+    <footer>
+        <div class="footer">
+            <p class="made-by">Made By </p>
+            <p class="author">Zuko</p>
+        </div>
+    </footer>
     
 </body>
 </html>
